--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,123 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
   box-sizing: border-box;
-  padding: 0;
+}
+
+body {
   margin: 0;
+  font-family: system-ui, -apple-system, sans-serif;
+  color: #000000;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+hr {
+  color: black;
+  width: 80%;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+p {
+  width: 90%;
+  max-width: 500px;
+  text-align: center;
+}
+
+.navbar {
+  background-color: rgba(0, 0, 0, 0.207);
+  width: 100%;
+  margin-bottom: 35px;
+  color: hotpink;
+  text-align: center;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.page {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 16px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
+  width: 100%;
+}
+
+.card {
+  background: #2a3d6a;
+  padding: 24px;
+  border-radius: 12px;
+  color: white;
+  width: 100%;
+  max-width: 420px;
+  /* box-shadow: 0 20px 40px rgba(0, 0, 0, 0.5); */
+}
+
+.green {
+  background-color: rgb(38, 138, 38);
+}
+
+.green-btn {
+  background-color: #afc8b4;
+}
+
+.card h1 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 1.8rem;
+  text-align: center;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
+button {
+  background: #afb4c8;
+  color: rgb(0, 0, 0);
+  border: none;
+  padding: 12px;
+  border-radius: 8px;
+  font-size: 0.94rem;
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+button:hover:not(:disabled) {
+  background: #ffffffbc;
+  /* font-size: 0.94rem; */
+}
+
+button:focus-visible {
+  outline: 2px solid #000000;
+  outline-offset: 2px;
+}
+
+.dropzone {
+  word-break: break-word;
+  border: 2px dashed #334155;
+  border-radius: 10px;
+  padding: 30px;
+  text-align: center;
+  cursor: pointer;
+  background: #0206175b;
+  transition: border-color 0.2s, background 0.2s;
+}
+
+.dropzone.active {
+  border-color: #2563eb;
+  background: #02061782;
+}
+
+.dropzone label {
+  cursor: pointer;
+  color: #ffffff;
+  font-size: 0.95rem;
 }
